4.1.0
-----
* Added steno order inversions to the board diagram
* Improved SVG rendering code
* Improved object tree dialog appearance and capabilities

4.0.0
-----
* Added user-configurable file for other steno systems/languages
* Added Python object tree dialog for debugging
* Improved lexer performance moderately

3.1.0
-----
* Dramatically improved index load time and memory usage at a slight cost on lookups
* Moved interactive console tool into a separate dialog window

3.0.0
-----
* Added index support and search for example translations by rule
* Added multi-threading to stop GUI from hanging at startup
* Added better support for parallel processing on large operations

2.1.0
-----
* Simplified core engine code
* Improved handling of GUI menu and tools
* Fixed several minor bugs
* Fixed pre-premature exception handling bug in engine

2.0.0
-----
* Dismantled application subclasses and moved code into components for modularity
* Compartmentalized all components into functional groups
* Added rule search with "/" prefix in the search window
* Fixed premature exception handling bug in engine

1.0.0
-----
* Completely reorganized component system
* Added parallel processing to batch mode
* Added link to show more results at the end of search lists
* Ctrl + mouse wheel now changes the font size in the search window
* General optimizations made on core (non-GUI) components

0.6.1
-----
* Added most major steno rules to the board diagram
* Improved board diagram scaling
* Improved text graph appearance and layout
* Console now accepts input from main text window

0.6.0
-----
* Text graphing code is now vastly improved
* More customization options for text graphing
* Tools menu with Python interpreter console is now available in plugin mode

0.5.1
-----
* Even more rules added, mostly related to vowels

0.5.0
-----
* Some components are now user-configurable
* More rules added (mostly orthographic variations)